HLT-4040 Fix mobile affixed (when it does affix, sometimes doesnt) spacing for prices Fixed mobile price on more info based on frequency Removed duplicate frequency filters and am now re-arranging them in DOM depending on breakpoint.

--- a/src/main/webapp/bundles/health_v4/less/results/results.less
+++ b/src/main/webapp/bundles/health_v4/less/results/results.less
@@ -130,8 +130,10 @@
 
     .frequencyAmount {
       color: @link-color;
-      font-size: 48px;
-
+      font-size: 42px;
+      @media(@sm) {
+        font-size: 48px;
+      }
       .frequencyTitle {
         display: none;
       }
